--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="script.js" defer></script>
     <title>Form validation</title>
 </head>
 <body>
     <div class="container">
         <h1>Form validation</h1>
-    <form action="">
+    <form action="" id="form">
         <div class="row">
+
+            <div id="alert" class="alert alert-danger" role="alert" style="display:none">
+                
+              </div>
+              
             <div class="col-sm-6 mt-5">
                 <label for="name">Name</label>
                 <input required placeholder="Enter your full name" class="form-control" type="text" id="name">
@@ -68,10 +74,11 @@
             </div>
 
             <div class="text-center mt-5">
-                <button class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-primary" onclick="validate()">Submit</button>
             </div>
         </div>
     </form>
     </div>
+
 </body>
 </html>
